# SkillScan

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/workflows/: python-tests.yml
ADRs/: ADR-0001-offline-and-pdf-policy.md
MemoryBank/: productcontext.md  projectbrief.md
adrs/: 0001-offline-and-pdf-policy.md
context/: product-context.md  project-brief.md  tech-context.md
scripts/: demo_compare.py  demo_parser.py  demo_report.py
src/agent/: comparator.py  errors.py  logger.py  parser.py  reporter.py  runner.py
src/samples/: jd.txt  profile.json
tests/: test_cli.py  test_comparator.py  test_logging.py  test_parser.py  test_reporter.py
