[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skillscan"
version = "0.1.0"
description = "Offline CLI to compare a Job Description with a candidate profile and generate a Markdown report."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "Rafael Lopes" }
]
dependencies = [
  "pypdf>=6.1.1"
]

[project.scripts]
skillscan = "agent.runner:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
